--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "fast-deep-equal": "^3.1.3",
     "lucide-react": "^0.562.0",
+    "luxon": "^3.4.1",
     "next": "16.1.1",
     "ramda": "^0.32.0",
     "react": "19.2.3",
@@ -31,6 +32,7 @@
     "sonner": "^2.0.7"
   },
   "devDependencies": {
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20",
     "@types/ramda": "^0.31.1",
     "@types/react": "^19",
