--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "16.1.1",
     "ramda": "^0.32.0",
     "react": "19.2.3",
+    "react-base-table": "^1.13.5",
     "react-dom": "19.2.3",
     "react-number-format": "^5.4.4",
     "react-virtualized": "^9.22.6",
